fixing z-index on header

--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -72,6 +72,7 @@ height: 50px;
   display: none;
   cursor: pointer;
   display: block;
+  z-index: 3;
   div {
     width: 30px;
     height: 2px;
